--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
       </a>
       <button type="button" class="btn">
         <a href="https://github.com/" target="_blank"
-          >Click aquí para ir a GitHub!</a
+          >!!Click aquí para ir a GitHub!!</a
         >
       </button>
     </div>
+    <script src="assets/js/script1.js"></script>
   </body>
 </html>
