--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Desafío Branching</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans|Space+Mono"
@@ -13,16 +19,21 @@
   </head>
   <body>
     <div class="container">
-      <h1>Ir a Github</h1>
+      <h1 class="py-2">Ir a Github</h1>
       <a href="https://github.com/">
-        <img src="assets/img/octanecat.png" alt="octocat" />
+        <img class="py-3" src="assets/img/octanecat.png" alt="octocat" />
       </a>
-      <button type="button" class="btn">
+      <button type="button" class="btn mt-3">
         <a href="https://github.com/" target="_blank"
           >!!Click aquí para ir a GitHub!!</a
         >
       </button>
     </div>
     <script src="assets/js/script1.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
