--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <h1 class="py-2">Ir a Github</h1>
       <a href="https://github.com/">
-        <img class="py-3" src="assets/img/octanecat.png" alt="octocat" />
+        <img class="py-3" src="assets/img/octanecat.png" alt="octocat2024" />
       </a>
       <button type="button" class="btn mt-3">
         <a href="https://github.com/" target="_blank"
